Add CSS styles and update HTML structure for product pages

--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Fashion R Us</title>
   </head>
   <body>
     <header>
-      <h1>Fashion R Us</h1>
+      <a href="index.html">
+        <h1>Fashion<span>R</span>Us</h1>
+      </a>
+      <nav>
+        <a href="index.html">Categories</a>
+        <a href="#">Brands</a>
+        <a href="#">Seasons</a>
+      </nav>
     </header>
 
     <main>
-      <section>
-        <h1>Categories</h1>
-        <a href="produktliste.html"><div class="category_list_container">Accessories</div></a>
-        <a href="produktliste.html"><div class="category_list_container">Apparel</div></a>
-        <a href="produktliste.html"><div class="category_list_container">Footwear</div></a>
-        <a href="produktliste.html"><div class="category_list_container">Homewear</div></a>
-        <a href="produktliste.html"><div class="category_list_container">Personal Care</div></a>
-        <a href="produktliste.html"><div class="category_list_container">Sporting Goods</div></a>
+      <section class="category_list">
+        <h2>Categories</h2>
+        <div class="category_list_container">
+          <a href="produktliste.html">Accessories</a>
+          <a href="produktliste.html">Apparel</a>
+          <a href="produktliste.html">Footwear</a>
+          <a href="produktliste.html">Homewear</a>
+          <a href="produktliste.html">Personal Care</a>
+          <a href="produktliste.html">Sporting Goods</a>
+        </div>
       </section>
     </main>
   </body>
