--- a/produktliste.html
+++ b/produktliste.html
@@ -3,38 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Products</title>
   </head>
-  <body>
+  <body class="productlist">
     <header>
-      <h1>Fashion R Us</h1>
+      <a href="index.html">
+        <h1>Fashion<span>R</span>Us</h1>
+      </a>
+      <nav>
+        <a href="index.html">Categories</a>
+        <a href="#">Brands</a>
+        <a href="#">Seasons</a>
+      </nav>
     </header>
+
     <main>
-      <h1>Products</h1>
-      <article class="product_list_container">
-        <img src="img/barca_tee.webp" alt="Product Image" />
-        <h2>Barcelona t-shirt</h2>
+      <h2>Products</h2>
+      <article class="smallProduct">
+        <div class="sold_out_and_img_container">
+          <img src="https://kea-alt-del.dk/t7/images/webp/640/1571.webp" alt="Product Image" />
+        </div>
+        <h3>Shoes</h3>
         <p>DKK 799,-</p>
         <a href="produkt.html">Read more</a>
       </article>
-      <article class="product_list_container">
-        <img src="img/Barca_tee2.webp" alt="Product Image" />
-        <h2>Barcelona t-shirt</h2>
+
+      <article class="smallProduct soldOut">
+        <div class="sold_out_and_img_container">
+          <img src="https://kea-alt-del.dk/t7/images/webp/640/1572.webp" alt="Product Image" />
+          <p class="soldoutTxt color_me_gray">SOLD OUT</p>
+        </div>
+        <h3>Pants</h3>
         <p>Prev. DKK 799,-</p>
         <p>Now DKK 599,-</p>
         <a href="produkt.html">Read more</a>
       </article>
-      <article class="product_list_container">
-        <p>Sold out</p>
-        <img src="img/Adidas_boots.webp" alt="Product Image" />
-        <h2>Adidas boots</h2>
+
+      <article class="smallProduct discounted">
+        <div>
+          <img src="https://kea-alt-del.dk/t7/images/webp/640/1575.webp" alt="Product Image" />
+        </div>
+        <h3>White t-shirt</h3>
         <p>DKK 1299,-</p>
         <a href="produkt.html">Read more</a>
       </article>
-      <article class="product_list_container">
-        <img src="img/Adidas_boots2.webp" alt="Product Image" />
-        <p>Sold out</p>
-        <h2>Adidas boots</h2>
+
+      <article class="smallProduct discounted soldOut">
+        <div class="sold_out_and_img_container">
+          <img src="https://kea-alt-del.dk/t7/images/webp/640/1562.webp" alt="Product Image" />
+          <p class="soldoutTxt color_me_gray">SOLD OUT</p>
+        </div>
+        <h3>Blue t-shirt</h3>
         <p>Prev. DKK 1299,-</p>
         <p>Now DKK 999,-</p>
         <a href="produkt.html">Read more</a>
