--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/index.js" defer></script>
     <title>Fashion R Us</title>
   </head>
   <body>
@@ -21,14 +22,7 @@
     <main>
       <section class="category_list">
         <h2>Categories</h2>
-        <div class="category_list_container">
-          <a href="produktliste.html">Accessories</a>
-          <a href="produktliste.html">Apparel</a>
-          <a href="produktliste.html">Footwear</a>
-          <a href="produktliste.html">Homewear</a>
-          <a href="produktliste.html">Personal Care</a>
-          <a href="produktliste.html">Sporting Goods</a>
-        </div>
+        <div class="category_list_container"></div>
       </section>
     </main>
   </body>
